// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Footer No Items Left 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <footer
    className="sc-AxmLO fsuaiR footer"
  >
    <span
      className="sc-Axmtr fikuMQ todo-count"
    >
      <span>
        No items left
      </span>
    </span>
    <ul
      className="sc-AxheI cvDQwC filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className=""
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className=""
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="sc-AxgMl bCcoDm"
      id="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Footer With Item Left 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <footer
    className="sc-AxmLO fsuaiR footer"
  >
    <span
      className="sc-Axmtr fikuMQ todo-count"
    >
      <span>
        <strong>
          1
        </strong>
         item left
      </span>
    </span>
    <ul
      className="sc-AxheI cvDQwC filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className=""
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className=""
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="sc-AxgMl egsJGd"
      id="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Footer With Items Left 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <footer
    className="sc-AxmLO fsuaiR footer"
  >
    <span
      className="sc-Axmtr fikuMQ todo-count"
    >
      <span>
        <strong>
          2
        </strong>
         items left
      </span>
    </span>
    <ul
      className="sc-AxheI cvDQwC filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className=""
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className=""
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="sc-AxgMl bCcoDm"
      id="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Header Default 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <header
    className="header"
  >
    <h1
      className="sc-AxhCb cAybVG"
    >
      todos
    </h1>
    <input
      autoFocus={true}
      className="sc-AxiKw sc-AxhUy eBYmDK new-todo"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
      type="text"
      value=""
    />
  </header>
</section>
`;

exports[`Storyshots TodoItem Default 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <ul
    className="sc-fznyAO jnstRf"
  >
    <li
      className="sc-fzplWN eWscOk"
    >
      <div
        className="view"
      >
        <input
          checked={false}
          className="sc-fzoLsD dHHJOk toggle"
          onChange={[Function]}
          type="checkbox"
        />
        <label
          onDoubleClick={[Function]}
        >
          Todo Text
        </label>
        <button
          className="sc-fzpans gCqawp destroy"
          onClick={[Function]}
        />
      </div>
      <input
        className="sc-AxiKw sc-fzozJi fKfkfu edit"
        onBlur={[Function]}
        onChange={[Function]}
        onKeyDown={[Function]}
        value=""
      />
    </li>
  </ul>
</section>
`;

exports[`Storyshots TodoList With Items 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <section
    className="sc-AxjAm ddDCwU todoapp"
  >
    <ul
      className="sc-fznyAO jnstRf todo-list"
    >
      <li
        className="sc-fzplWN eWscOk completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="sc-fzoLsD dHHJOk toggle"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            First
          </label>
          <button
            className="sc-fzpans gCqawp destroy"
            onClick={[Function]}
          />
        </div>
        <input
          className="sc-AxiKw sc-fzozJi fKfkfu edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </li>
      <li
        className="sc-fzplWN eWscOk"
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="sc-fzoLsD dHHJOk toggle"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Second
          </label>
          <button
            className="sc-fzpans gCqawp destroy"
            onClick={[Function]}
          />
        </div>
        <input
          className="sc-AxiKw sc-fzozJi fKfkfu edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </li>
      <li
        className="sc-fzplWN eWscOk completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="sc-fzoLsD dHHJOk toggle"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Last
          </label>
          <button
            className="sc-fzpans gCqawp destroy"
            onClick={[Function]}
          />
        </div>
        <input
          className="sc-AxiKw sc-fzozJi fKfkfu edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </li>
      <li
        className="sc-fzplWN eWscOk"
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="sc-fzoLsD dHHJOk toggle"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Last
          </label>
          <button
            className="sc-fzpans gCqawp destroy"
            onClick={[Function]}
          />
        </div>
        <input
          className="sc-AxiKw sc-fzozJi fKfkfu edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value=""
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots ToggleAll Default 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <input
    checked={true}
    className="sc-fznKkj fAwQxm toggle-all"
    id="toggle-all"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="toggle-all"
  >
    Mark all as complete
  </label>
</section>
`;

exports[`Storyshots Welcome to Storybook 1`] = `
<section
  className="sc-AxjAm ddDCwU todoapp"
>
  <article
    style={
      Object {
        "backgroundColor": "#fff",
        "color": "#000",
        "fontFamily": "\\"Helvetica Neue\\", Helvetica, \\"Segoe UI\\", Arial, freesans, sans-serif",
        "lineHeight": 1.4,
        "padding": 15,
      }
    }
  >
    <h1>
      Welcome to storybook
    </h1>
    <p>
      This is a UI component dev environment for your app.
    </p>
    <p>
      We've added some basic stories inside the 
      <code
        style={
          Object {
            "backgroundColor": "#f3f2f2",
            "border": "1px solid #eae9e9",
            "borderRadius": 4,
            "color": "#3a3a3a",
            "fontSize": 15,
            "fontWeight": 600,
            "padding": "2px 5px",
          }
        }
      >
        src/stories
      </code>
       directory.
      <br />
      A story is a single state of one or more UI components. You can have as many stories as you want.
      <br />
      (Basically a story is like a visual test case.)
    </p>
    <p>
      See these sample 
      <button
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderBottom": "1px solid #1474f3",
            "borderLeft": "none",
            "borderRight": "none",
            "borderTop": "none",
            "color": "#1474f3",
            "cursor": "pointer",
            "font": "inherit",
            "padding": 0,
            "paddingBottom": 2,
            "textDecoration": "none",
          }
        }
        type="button"
      >
        stories
      </button>
       for a component called 
      <code
        style={
          Object {
            "backgroundColor": "#f3f2f2",
            "border": "1px solid #eae9e9",
            "borderRadius": 4,
            "color": "#3a3a3a",
            "fontSize": 15,
            "fontWeight": 600,
            "padding": "2px 5px",
          }
        }
      >
        Button
      </code>
      .
    </p>
    <p>
      Just like that, you can add your own components as stories.
      <br />
      You can also edit those components and see changes right away.
      <br />
      (Try editing the 
      <code
        style={
          Object {
            "backgroundColor": "#f3f2f2",
            "border": "1px solid #eae9e9",
            "borderRadius": 4,
            "color": "#3a3a3a",
            "fontSize": 15,
            "fontWeight": 600,
            "padding": "2px 5px",
          }
        }
      >
        Button
      </code>
       stories located at 
      <code
        style={
          Object {
            "backgroundColor": "#f3f2f2",
            "border": "1px solid #eae9e9",
            "borderRadius": 4,
            "color": "#3a3a3a",
            "fontSize": 15,
            "fontWeight": 600,
            "padding": "2px 5px",
          }
        }
      >
        src/stories/1-Button.stories.js
      </code>
      .)
    </p>
    <p>
      Usually we create stories with smaller UI components in the app.
      <br />
      Have a look at the 
      <a
        href="https://storybook.js.org/basics/writing-stories"
        rel="noopener noreferrer"
        style={
          Object {
            "borderBottom": "1px solid #1474f3",
            "color": "#1474f3",
            "paddingBottom": 2,
            "textDecoration": "none",
          }
        }
        target="_blank"
      >
        Writing Stories
      </a>
       section in our documentation.
    </p>
    <p
      style={
        Object {
          "opacity": 0.5,
        }
      }
    >
      <b>
        NOTE:
      </b>
      <br />
      Have a look at the 
      <code
        style={
          Object {
            "backgroundColor": "#f3f2f2",
            "border": "1px solid #eae9e9",
            "borderRadius": 4,
            "color": "#3a3a3a",
            "fontSize": 15,
            "fontWeight": 600,
            "padding": "2px 5px",
          }
        }
      >
        .storybook/webpack.config.js
      </code>
       to add webpack loaders and plugins you are using in this project.
    </p>
  </article>
</section>
`;
